--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 </head>
 <body>
 	
-	<div style="background-color: red" class="container">
+	<div style="background-color: red" class="container-fluid">
 
 	<h1>We are learning alot</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum nisi dolor inventore, debitis vel, aspernatur sunt voluptatem repellendus aperiam doloribus commodi perspiciatis, impedit. Nisi modi dicta expedita eius architecto aut.</p>
 
 	<div style="background-color: yellow" class="row">
-		<div class="col-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus rerum, enim perspiciatis cupiditate a nobis quis eligendi sit repellat corrupti minus esse quidem ullam ad, unde saepe at nostrum sint.</div>
+
+		<div class="col-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus rerum, enim perspiciatis cupiditate a nobis quis eligendi sit repellat corrupti minus esse quidem ullam ad, unde saepe at nostrum sint. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis pariatur delectus ducimus asperiores, libero culpa dolore similique! Qui alias, repudiandae cumque est sint quod culpa unde distinctio debitis minus enim?</div><br>
+
+		<div class="col-sm-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus rerum, enim perspiciatis cupiditate a nobis quis eligendi sit repellat corrupti minus esse quidem ullam ad, unde saepe at nostrum sint. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis pariatur delectus ducimus asperiores, libero culpa dolore similique! Qui alias, repudiandae cumque est sint quod culpa unde distinctio debitis minus enim?</div><br>
+
+		<div class="col-sm-4">ctetur adipisicing elit. Necessitatibus rerum, enim perspiciatis cupiditate a nobis quis eligendi sit repellat corrupti minus esse quidem ullam ad, unde saepe at nostrum sint. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis pariatur delectus ducimus asperiores, libero culpa dolore similique! Qui alias, repudiandae cumque est sint quod culpa unde distinctio debitis minus enim?</div>
+
 	</div>
 
 	</div>
